welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
	if (n>21){
		return Math.abs((21-n)*2)
	} else {
		return Maths.abs(21-n)
		}
}
